--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <img width="200px" src="assets/images/logo.png" title="Garbage Piano">
-  <h2>coming soon</h2>
-</div>
+<app-coming-soon>
+</app-coming-soon>
 
 <router-outlet></router-outlet>
