Add Angular Material
- See https://material.angular.io/
- Used ng add @angular/material with options:
  - prebuilt theme: Indigo/Pink: https://material.angular.io?theme=indigo-pink
  - HammerJS for gesture recognition
  - Set up browser animations for Angular Material

--- a/src/app/coming-soon/coming-soon.component.html
+++ b/src/app/coming-soon/coming-soon.component.html
@@ -1,4 +1,4 @@
 <div style="text-align:center">
   <img width="200px" src="assets/images/logo.png" title="Garbage Piano">
-  <h2>coming soon</h2>
+  <h2>coming $oon</h2>
 </div>
