add noddy halo CSR emblems

--- a/src/app/coming-soon/coming-soon.component.html
+++ b/src/app/coming-soon/coming-soon.component.html
@@ -1,4 +1,28 @@
 <div style="text-align:center">
-  <img width="200px" src="assets/images/logo.png" title="Garbage Piano">
-  <h2>coming $oon</h2>
+  <div>
+    <div>
+      <img width="100px" src="{{ haloRanks.champ.img.src }}" title="{{ haloRanks.champ.title }}">
+    </div>
+    <div>
+      <img style="width: 50px;" src="{{ haloRanks.bronze.img.src }}" title="{{ haloRanks.bronze.title }}">
+      <img style="width: 50px;" src="{{ haloRanks.silver.img.src }}" title="{{ haloRanks.silver.title }}">
+      <img style="width: 50px;" src="{{ haloRanks.gold.img.src }}" title="{{ haloRanks.gold.title }}">
+      <img style="width: 50px;" src="{{ haloRanks.plat.img.src }}" title="{{ haloRanks.plat.title }}">
+      <img style="width: 50px;" src="{{ haloRanks.diamond.img.src }}" title="{{ haloRanks.diamond.title }}">
+      <img style="width: 50px;" src="{{ haloRanks.onyx.img.src }}" title="{{ haloRanks.onyx.title }}">
+    </div>
+    <div>
+    </div>
+  </div>
+
+  <hr />
+
+  <div>
+    <h2>
+      Piano Practice
+    </h2>
+    <p>
+      coming $oon
+    </p>
+  </div>
 </div>
