add random scales

--- a/src/app/coming-soon/coming-soon.component.html
+++ b/src/app/coming-soon/coming-soon.component.html
@@ -24,5 +24,13 @@
     <p>
       coming $oon
     </p>
+    <p>
+      ...
+    </p>
+    <p style="font-size: x-small">
+      in the meantime
+      <br/>
+      <a mat-list-item href="random-keys">random keys</a>
+    </p>
   </div>
 </div>
