--- a/src/app/coming-soon/coming-soon.component.html
+++ b/src/app/coming-soon/coming-soon.component.html
@@ -30,7 +30,7 @@
     <p style="font-size: x-small">
       in the meantime
       <br/>
-      <a mat-list-item href="random-keys">random keys</a>
+      <a mat-list-item routerLink="random-keys" routerLinkActive="active">random keys</a>
     </p>
   </div>
 </div>
