convert random-keys to lazy module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
+<button routerLink="/customers">Customers</button>
+<button routerLink="/random-keys">Random Keys</button>
+<button routerLink="">Home</button>
+<hr/>
+
 <!--The content below is only a placeholder and can be replaced.-->
 <router-outlet></router-outlet>
